# NVS_Beispiel_Translater

./: meson.build  meson_options.txt  test.txt
src/: includes.cpp
src/client/: main.cpp
src/server/: main.cpp
