option('asioincludedir', type : 'string', value : '/home/andi/Documents/Schule/5BHIF/NVS/asio/include/', description : 'the include dir of asio')
option('spdlogincludedir', type : 'string', value : '/home/andi/Documents/Schule/5BHIF/NVS/spdlog/include/', description : 'the include dir of spdlog')
option('cli11includedir', type : 'string', value : '/home/andi/Documents/Schule/5BHIF/NVS/CLI11/', description : 'the include dir of cli11')