option('asio_include_dir', type : 'string', value : '/home/andi/Documents/Schule/NVS/asio/include/', description : 'the include dir of asio')
option('spdlog_include_dir', type : 'string', value : '/home/andi/Documents/Schule/NVS/spdlog/include/', description : 'the include dir of spdlog')
option('cli11_include_dir', type : 'string', value : '/home/andi/Documents/Schule/NVS/CLI11/', description : 'the include dir of cli11')